--- a/04-OS2-tableView WatchKit App/Base.lproj/Interface.storyboard
+++ b/04-OS2-tableView WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6724" systemVersion="14A389" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8191" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8092"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider=""/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController">
+                    <items>
+                        <table alignment="left" id="amp-qD-OzV">
+                            <items>
+                                <tableRow identifier="xmgcell" id="wol-fI-gbm" customClass="XMGCell">
+                                    <group key="rootItem" width="1" alignment="left" id="dLj-Ar-PAr">
+                                        <items>
+                                            <imageView width="0.25" height="0.80000000000000004" alignment="left" verticalAlignment="center" id="KyT-3I-tNU"/>
+                                            <label width="0.75" height="1" alignment="right" verticalAlignment="center" text="xmgCell" id="29c-pk-N60"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="imageView" destination="KyT-3I-tNU" id="VBo-UG-ya7"/>
+                                        <outlet property="textLab" destination="29c-pk-N60" id="YWl-3Q-9ky"/>
+                                    </connections>
+                                </tableRow>
+                                <tableRow identifier="cell2" id="9yY-Qs-J5s">
+                                    <group key="rootItem" width="1" alignment="left" id="iZz-Q5-ACv">
+                                        <items>
+                                            <slider width="1" alignment="left" value="1" maximum="3" steps="3" id="vqW-ll-Vvm"/>
+                                        </items>
+                                    </group>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="tableVIew" destination="amp-qD-OzV" id="esR-oI-w4r"/>
+                    </connections>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
         </scene>
@@ -31,7 +60,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider=""/>
+                <controller id="4sK-HA-Art" customClass="NotificationController"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
